# riscv-pk

./: .build-qemu.sh  .fast-setup.sh  .gitignore  .travis.yml  Cargo.toml  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  encl-life-cycle.gv  graph1.ps  lib.rs  riscv64gc-linux-gnu.json  riscv64gc-unknown-linux-gnuhf.json  sm  test-sm.sh
.cargo/: config
bbl/: bbl.c  bbl.lds  bbl.mk.in
hash/: sm_expected_hash.h
machine/: emulation.c  fdt.c  fdt.h  htif.c  ipi.c  machine.mk.in  mcall.h  mentry.S  minit.c  mtrap.c  mtrap.h  uart.c  uart.h
pk/: pk.lds  pk.mk.in
scripts/: qemu-riscv64
sm/: Cargo.toml  attest.c  attest.rs  bindings.h  build.rs  cpu.c  cpu.h  cpu.rs  crypto.rs  enclave.c  enclave.h  enclave.rs  enclave_copy.S  enclave_copy.h  enclave_syscall.c  lib.rs  mprv.S  mprv.h  page.c  page.h  platform.h  pmp.c  pmp.h  pmp.rs  sm-sbi.c  sm-sbi.h  sm.c  sm.h  sm.mk.in  sm.rs  task.c  task.h  thread.c  thread.h  trap.S
sm/platform/fu540/: fu540.c  fu540_internal.c  waymasks.c  waymasks.h
sm/sha3/: sha3.c
sm/tests/: CMakeLists.txt  enclave_test.c  pmp_test.c  test_enclave.c
sm/tests/mock/: lib.rs  machine.c  mprv.c
sm_c/: enclave.c  pmp.c  sm-sbi.c  thread.c  trap.S
sm_rs/: Cargo.toml  attest.rs  bindings.h  build.rs  cpu.h  cpu.rs  crypto.h  crypto.rs  enclave.h  enclave.rs  enclave_copy.S  enclave_copy.h  lib.rs  mprv.S  mprv.rs  pmp.c  pmp.h  pmp.rs  sm-sbi.c  sm-sbi.h  sm.h  sm.mk.in  sm.rs  sm_rs.ac  sm_rs.mk.in
sm_rs/platform/fu540/: fu540_internal.c  waymasks.c  waymasks.h
sm_rs/tests/: test_pmp.c
sm_rs/tests/mock/: Cargo.toml  machine.c
util/: Cargo.toml  bitfield.rs  lib.rs  string.c
