[package]
name = "sm-rs"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
spin = "0.5"
util = { path = "../util" }

[dependencies.riscv]
git = "https://github.com/rust-embedded/riscv"
features = ["inline-asm"]

[build-dependencies]
bindgen = "0.50"


[dev-dependencies]
test = { git = "https://github.com/keystone-enclave/utest", branch = "fix-interface" }
utest-macros = { git = "https://github.com/keystone-enclave/utest", branch = "fix-interface" }
mock = { path = "./tests/mock" }
